--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
+NODE_ENV=
 APP_NAME="auth-service"
 HOST="http://localhost:4000"
-CLIENT_HOST="http://localhost:3000"
+DEFAULT_CLIENT_HOST=
 PORT=4000
 
 DB_USERNAME="postgres"
@@ -13,7 +14,6 @@ DATABASE_URL=
 
 REDIS_PORT=6379
 REDIS_HOST="cache"
-REDIS_CLUSTER_MODE="disabled"
 REDIS_URL=
 
 MAIL_FROM="example@mail.com"
@@ -21,7 +21,7 @@ MAIL_FROM="example@mail.com"
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION="us-east-1"
-S3_BUCKET=
+AWS_S3_BUCKET=
 
 TEST_CLIENT_ID=test
 
