--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,9 +72,9 @@ workflows:
       - aws-ecs/deploy-service-update:
           requires:
             - aws-ecr/build-and-push-image
-          family: "${AWS_ECR_REPO}-service"
+          family: "${AWS_ECR_REPO}-task"
           cluster-name: "${AWS_ECR_REPO}-cluster"
-          container-image-name-updates: "container=${AWS_ECR_REPO}-service,tag=${CIRCLE_SHA1}"
+          container-image-name-updates: "container=${AWS_ECR_REPO}-task,tag=${CIRCLE_BRANCH}"
           filters:
             branches:
               only:
