--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "docker:cli": "docker exec -it auth-service sh",
     "docker:build": "docker build -t usmansbk/auth-serivce .",
     "docker:build:prod": "docker build -t usmansbk/auth-serivce . -f Dockerfile.production",
-    "docker:test": "docker compose run --rm api yarn test",
-    "env": "sync-dotenv"
+    "docker:test": "docker compose run --rm api yarn test"
   },
   "description": "Sequelize GraphQL server template",
   "main": "index.js",
@@ -113,10 +112,5 @@
   },
   "nodemonConfig": {
     "ext": "js,gql,env,json"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn env"
-    }
   }
 }
