--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "transpile": "babel src -d dist --copy-files",
     "build": "yarn clean && yarn transpile",
     "test": "cross-env DOTENV_CONFIG_PATH=.env.test jest -i",
-    "createsu": "node dist/scripts/createRootUser",
-    "createapp": "node dist/scripts/createApplication",
-    "listapp": "node dist/scripts/listApplications",
+    "createsu": "node dist/scripts/createRoot",
+    "createapp": "node dist/scripts/createApp",
+    "listapp": "node dist/scripts/listApp",
     "prepare": "husky install",
     "createdb:test": "cross-env DOTENV_CONFIG_PATH=.env.test sequelize db:create --env test",
     "seed": "sequelize-cli db:seed:all",
