--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "transpile": "babel src -d dist --copy-files",
     "build": "yarn clean && yarn transpile",
     "test": "cross-env DOTENV_CONFIG_PATH=.env.test jest -i",
-    "createsu": "node dist/scripts/createRoot",
+    "createroot": "node dist/scripts/createRoot",
     "createapp": "node dist/scripts/createApp",
     "listapp": "node dist/scripts/listApp",
     "prepare": "husky install",
@@ -17,9 +17,7 @@
     "docker:start": "docker compose up",
     "docker:cli": "docker exec -it auth-service sh",
     "docker:build": "docker build -t usmansbk/auth-serivce .",
-    "docker:build:prod": "docker build -t usmansbk/auth-serivce . -f Dockerfile.production",
-    "docker:test": "docker compose run --rm api yarn test",
-    "jwt": "sh dist/scripts/generateJWTkeys.sh"
+    "docker:test": "docker compose run --rm api yarn test"
   },
   "description": "Sequelize GraphQL server template",
   "main": "index.js",
