--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "inquirer": "^8.2.4",
     "ioredis": "^5.2.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash.capitalize": "^4.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
