--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,42 @@
-# development
+NODE_ENV=
 APP_NAME="auth-service"
-AWS_ACCESS_KEY_ID=
-AWS_REGION="us-east-1"
-AWS_SECRET_ACCESS_KEY=
-CLIENT_HOST=
-CLOUDFRONT_API_ENDPOINT=
-DATABASE_URL=
-DB_DIALECT="postgres"
-DB_HOST="db"
-DB_NAME="user_pool_example"
-DB_NAME_TEST=
-DB_PASSWORD="postgres"
-DB_PORT=5432
-DB_USERNAME="postgres"
-FACEBOOK_APP_ACCESS_TOKEN=
-FACEBOOK_APP_ID=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
 HOST="http://localhost:4000"
-MAIL_FROM="example@mail.com"
+DEFAULT_CLIENT_HOST=
 PORT=4000
-REDIS_HOST="cache"
+
+DB_USERNAME="postgres"
+DB_PASSWORD="postgres"
+DB_NAME="user_pool_example"
+DB_HOST="db"
+DB_DIALECT="postgres"
+DB_PORT=5432
+DATABASE_URL=
+
 REDIS_PORT=6379
+REDIS_HOST="cache"
+REDIS_CLUSTER_MODE=
 REDIS_URL=
-S3_BUCKET=
-SEGMENT_WRITE_KEY="your-segment-key"
-SENTRY_DSN=
+
+MAIL_FROM="example@mail.com"
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION="us-east-1"
+AWS_S3_BUCKET=
+
 TEST_CLIENT_ID=test
+
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+FACEBOOK_APP_ID=
+FACEBOOK_APP_ACCESS_TOKEN=
+
+CLOUDFRONT_API_ENDPOINT=
+
+SEGMENT_WRITE_KEY="your-segment-key"
+SENTRY_DSN=
