--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ DATABASE_URL=
 DB_DIALECT="postgres"
 DB_HOST="db"
 DB_NAME="user_pool_example"
+DB_NAME_TEST=
 DB_PASSWORD="postgres"
 DB_PORT=5432
 DB_USERNAME="postgres"
