fix null pointer bug

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_NAME="auth-service"
 AWS_ACCESS_KEY_ID=
 AWS_REGION="us-east-1"
 AWS_SECRET_ACCESS_KEY=
-CLIENT_HOST=
+DEFAULT_CLIENT_HOST=
 CLOUDFRONT_API_ENDPOINT=
 DATABASE_URL=
 DB_DIALECT="postgres"
